unpackaged/main/default/objects/ThirdPartyEvent__e/ThirdPartyEvent__e.object-meta.xml
<CustomObject>
    <description>To send events to Third Parties</description>
    <label>ThirdPartyEvent</label>
    <pluralLabel>ThirdPartyEvents</pluralLabel>
</CustomObject>