unpackaged/main/default/objects/ThirdPartyEvent__e/fields/CallKey__c.field-meta.xml
<CustomField>
    <fullName>CallKey__c</fullName>
    <description>Unique Id for the Call</description>
    <label>CallKey</label>
    <length>50</length>
    <type>Text</type>
</CustomField>