unpackaged/main/default/objects/ThirdPartyEvent__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <description>Platform Event Type</description>
    <label>EventType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>