unpackaged/main/default/objects/ThirdPartyEvent__e/fields/Params__c.field-meta.xml
<CustomField>
    <fullName>Params__c</fullName>
    <description>Used to Send the key value pair of list of fields needed by subscribers</description>
    <label>Params</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>