unpackaged/main/default/objects/ThirdPartyEvent__e/fields/Technology_Type__c.field-meta.xml
<CustomField>
    <fullName>Technology_Type__c</fullName>
    <label>Technology Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>